<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawPainter"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/draw" />
        <item
            android:id="@+id/dateShe"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/dateShe" />
        <item
            android:id="@+id/billRec"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/billRec" />
        <item
            android:id="@+id/todayY"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/todayY" />
        <item
            android:id="@+id/modHol"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/modHol" />
    </group>

</menu>
